--- a/TicTacToeC#/TicTacToeC#.csproj
+++ b/TicTacToeC#/TicTacToeC#.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="PrintBoard.cs" />
+  </ItemGroup>
+
 </Project>
