--- a/TicTacToeC#/appsettings.json
+++ b/TicTacToeC#/appsettings.json
@@ -1,5 +1,5 @@
-{
-  "ConnectionStrings": {
-    "MyDatabase": "Server=localhost\\SQLEXPRESS;Database=Game;Integrated Security=True;"
-  }
-}
+//{
+//  "ConnectionStrings": {
+//    "MyDatabase": "Server=localhost\\SQLEXPRESS;Database=Game;Integrated Security=True;"
+//  }
+//}
