--- a/TicTacToeC#/TicTacToeC.csproj
+++ b/TicTacToeC#/TicTacToeC.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net7.0</TargetFramework>
-    <RootNamespace>TicTacToeC_</RootNamespace>
+    <RootNamespace>TicTacToeC</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
