--- a/GameFactory/GameFactory.csproj
+++ b/GameFactory/GameFactory.csproj
@@ -18,4 +18,9 @@
     <Compile Remove="PrintBoard.cs" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
+  </ItemGroup>
+
 </Project>
