working except for chatgpt

--- a/GameFactory/appsettings.json
+++ b/GameFactory/appsettings.json
@@ -1,5 +1,6 @@
 //{
 //  "ConnectionStrings": {
-//    "MyDatabase": "Server=localhost\\SQLEXPRESS;Database=Game;Integrated Security=True;"
+//    "MyDatabase": "Server=localhost\\SQLE
+  PRESS;Database=Game;Integrated Security=True;"
 //  }
 //}
