refactor to classlibrary

--- a/GameFactory/GameFactory.csproj
+++ b/GameFactory/GameFactory.csproj
@@ -25,4 +25,8 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ClassLibrary\CoreGameFactory.csproj" />
+  </ItemGroup>
+
 </Project>
