--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,5 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 
+#databaseutility with sqlconnectionstring
+ClassLibrary/SQL/SQLDatabaseUtility.cs
